src/test/deca/context/valid/class/valid_cast_float_to_float.deca
// Description:
// Test valid cast from float to float
// Test rule 3.29
//
// [Begin Result]
//Aucun problème détecté
// [End Result]
//
// History:
// cree le 07/01/2025
{
    float f = (float)(3.14); // Conversion autorisée : float vers float
}
